syntax = "proto3";

package pasans.pasans;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "pasans/pasans/params.proto";
import "pasans/pasans/system_info.proto";
import "pasans/pasans/stored_game.proto";

option go_package = "pasans/x/pasans/types";

// GenesisState defines the pasans module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params     params         = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
           SystemInfo systemInfo     = 2 [(gogoproto.nullable) = false];
  repeated StoredGame storedGameList = 3 [(gogoproto.nullable) = false] ;
}

