syntax = "proto3";

package pasans.pasans;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "pasans/pasans/params.proto";
import "pasans/pasans/system_info.proto";
import "pasans/pasans/stored_game.proto";

option go_package = "pasans/x/pasans/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pasans/pasans/params";
  
  }
  
  // Queries a SystemInfo by index.
  rpc SystemInfo (QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
    option (google.api.http).get = "/pasans/pasans/system_info";
  
  }
  
  // Queries a list of StoredGame items.
  rpc StoredGame    (QueryGetStoredGameRequest) returns (QueryGetStoredGameResponse) {
    option (google.api.http).get = "/pasans/pasans/stored_game/{index}";
  
  }
  rpc StoredGameAll (QueryAllStoredGameRequest) returns (QueryAllStoredGameResponse) {
    option (google.api.http).get = "/pasans/pasans/stored_game";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
  SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}

message QueryGetStoredGameRequest {
  string index = 1;
}

message QueryGetStoredGameResponse {
  StoredGame storedGame = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredGameRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredGameResponse {
  repeated StoredGame                             storedGame = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

